# asciimation

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: animations.rs  filters.rs  frame.rs  lib.rs  main.rs  utils.rs
src/animations/: drops.rs  gol.rs  hexagons.rs  hills.rs  mandelbrot.rs  matrix.rs  moving_blocks.rs  pixel.rs  prelude.rs  qrcode.rs  rainbow.rs  random_walkers.rs  text_overlay.rs  triangles.rs
