[package]
name = "asciimation"
version = "0.1.0"
edition = "2021"
default-run = "shuffle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
ctrlc = "3.4.4"
nalgebra = "0.32.6"
num-integer = "0.1.46"
qrcode = "0.14.0"
rand = "0.8.5"
terminal_size = "0.3.0"
